@@ -1348,7 +1348,28 @@ public class OOXMLParserTest extends TikaTest {
         DecimalFormatSymbols symbols = new DecimalFormatSymbols(locale);
         //16 digit number is treated as scientific notation as is the 16 digit formula
         assertContains("1"+symbols.getDecimalSeparator()+"23456789012345E+15</td>\t"+
-                "<td>1"+symbols.getDecimalSeparator()+"23456789012345E+15", xml);    }
+                "<td>1"+symbols.getDecimalSeparator()+"23456789012345E+15", xml);
+    }
+
+    @Test
+    public void testBigIntegersWGeneralFormatWLocaleIT() throws Exception {
+        LocaleUtil.setUserLocale(Locale.ITALIAN);
+        //TIKA-2438
+        try {
+            String xml = getXML("testEXCEL_big_numbers.xlsx").xml;
+            assertContains("123456789012345", xml);//15 digit number
+            assertContains("123456789012346", xml);//15 digit formula
+            Locale locale = LocaleUtil.getUserLocale();
+
+            DecimalFormatSymbols symbols = new DecimalFormatSymbols(locale);
+            //16 digit number is treated as scientific notation as is the 16 digit formula
+            assertContains("1" + symbols.getDecimalSeparator() + "23456789012345E+15</td>\t" +
+                    "<td>1" + symbols.getDecimalSeparator() + "23456789012345E+15", xml);
+        } finally {
+            LocaleUtil.setUserLocale(USER_LOCALE);
+        }
+    }
+
 
     @Test
     public void testBoldHyperlink() throws Exception {
@@ -1540,47 +1561,53 @@ public class OOXMLParserTest extends TikaTest {
 
     @Test
     public void testXLSBVarious() throws Exception {
-        OfficeParserConfig officeParserConfig = new OfficeParserConfig();
-        officeParserConfig.setExtractMacros(true);
-        ParseContext parseContext = new ParseContext();
-        parseContext.set(OfficeParserConfig.class, officeParserConfig);
-        List<Metadata> metadataList = getRecursiveMetadata("testEXCEL_various.xlsb", parseContext);
-        assertEquals(4, metadataList.size());
+        try {
+            LocaleUtil.setUserLocale(Locale.US);
+            //have to set to US because of a bug in POI for $   3.03 in Locale.ITALIAN
+            OfficeParserConfig officeParserConfig = new OfficeParserConfig();
+            officeParserConfig.setExtractMacros(true);
+            ParseContext parseContext = new ParseContext();
+            parseContext.set(OfficeParserConfig.class, officeParserConfig);
+            List<Metadata> metadataList = getRecursiveMetadata("testEXCEL_various.xlsb", parseContext);
+            assertEquals(4, metadataList.size());
 
-        String xml = metadataList.get(0).get(RecursiveParserWrapper.TIKA_CONTENT);
-        assertContains("<td>13</td>", xml);
-        assertContains("<td>13.1211231321</td>", xml);
-        assertContains("<td>$   3.03</td>", xml);
-        assertContains("<td>20%</td>", xml);
-        assertContains("<td>13.12</td>", xml);
-        assertContains("<td>123456789012345</td>", xml);
-        assertContains("<td>1.23456789012345E+15</td>", xml);
-        assertContains("test comment2", xml);
+            String xml = metadataList.get(0).get(RecursiveParserWrapper.TIKA_CONTENT);
+            assertContains("<td>13</td>", xml);
+            assertContains("<td>13.1211231321</td>", xml);
+            assertContains("<td>$   3.03</td>", xml);
+            assertContains("<td>20%</td>", xml);
+            assertContains("<td>13.12</td>", xml);
+            assertContains("<td>123456789012345</td>", xml);
+            assertContains("<td>1.23456789012345E+15</td>", xml);
+            assertContains("test comment2", xml);
 
-        assertContains("comment4 (end of row)", xml);
+            assertContains("comment4 (end of row)", xml);
 
 
-        assertContains("<td>1/4</td>", xml);
-        assertContains("<td>3/9/17</td>", xml);
-        assertContains("<td>4</td>", xml);
-        assertContains("<td>2</td>", xml);
+            assertContains("<td>1/4</td>", xml);
+            assertContains("<td>3/9/17</td>", xml);
+            assertContains("<td>4</td>", xml);
+            assertContains("<td>2</td>", xml);
 
-        assertContains("<td>   46/1963</td>", xml);
-        assertContains("<td>  3/128</td>", xml);
-        assertContains("test textbox", xml);
+            assertContains("<td>   46/1963</td>", xml);
+            assertContains("<td>  3/128</td>", xml);
+            assertContains("test textbox", xml);
 
-        assertContains("test WordArt", xml);
+            assertContains("test WordArt", xml);
 
-        assertContains("<a href=\"http://lucene.apache.org/\">http://lucene.apache.org/</a>", xml);
-        assertContains("<a href=\"http://tika.apache.org/\">http://tika.apache.org/</a>", xml);
+            assertContains("<a href=\"http://lucene.apache.org/\">http://lucene.apache.org/</a>", xml);
+            assertContains("<a href=\"http://tika.apache.org/\">http://tika.apache.org/</a>", xml);
 
-        assertContains("OddLeftHeader OddCenterHeader OddRightHeader", xml);
-        assertContains("EvenLeftHeader EvenCenterHeader EvenRightHeader", xml);
+            assertContains("OddLeftHeader OddCenterHeader OddRightHeader", xml);
+            assertContains("EvenLeftHeader EvenCenterHeader EvenRightHeader", xml);
 
-        assertContains("FirstPageLeftHeader FirstPageCenterHeader FirstPageRightHeader", xml);
-        assertContains("OddLeftFooter OddCenterFooter OddRightFooter", xml);
-        assertContains("EvenLeftFooter EvenCenterFooter EvenRightFooter", xml);
-        assertContains("FirstPageLeftFooter FirstPageCenterFooter FirstPageRightFooter", xml);
+            assertContains("FirstPageLeftHeader FirstPageCenterHeader FirstPageRightHeader", xml);
+            assertContains("OddLeftFooter OddCenterFooter OddRightFooter", xml);
+            assertContains("EvenLeftFooter EvenCenterFooter EvenRightFooter", xml);
+            assertContains("FirstPageLeftFooter FirstPageCenterFooter FirstPageRightFooter", xml);
+        } finally {
+            LocaleUtil.setUserLocale(USER_LOCALE);
+        }
     }
 
     @Test
